2007-12-07  Dan Williams  <dcbw@redhat.com>

	Noticed by Christian Persch <chpe@gnome.org>

	* src/menu-items.c
		- (nm_network_menu_item_class_dispose): always chain up to parent when
			disposing

2007-12-07  Dan Williams  <dcbw@redhat.com>

	Patch from Christian Persch <chpe@gnome.org>

	* src/vpn-properties/nm-vpn-properties.c
		- (vpn_druid_vpn_confirm_page_prepare): fix the object the confirm text
			gets applied to
		- (init_app): Fix spacing around elements to better conform to HIG

2007-12-07  Dan Williams  <dcbw@redhat.com>

	Patch from Christian Persch <chpe@gnome.org>

	* src/vpn-properties/nm-vpn-properties.c
		- (main): don't call gtk_init() twice (gnome.org #473287)

2007-12-05  Dan Williams  <dcbw@redhat.com>

	* COPYING.LIB
		- Because we distribute eggtrayicon, need to include the LGPL too
			(gnome.org #449111)

2007-12-05  Dan Williams  <dcbw@redhat.com>

	* src/vpn-properties/nm-vpn-properties.c
		- (vpn_druid_vpn_confirm_page_finish, edit_cb): ensure that the edited
			VPN connection has a vpn-properties setting to work around previous
			bugs where the vpn-properties setting wouldn't be created and saved

2007-12-05  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (get_vpn_connections): don't show VPN connections that don't have
			the VPN Properties item

2007-12-05  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (add_one_vpn_connection): don't crash on connections that are actually
			invalid but that the applet shows anyway.  Still need a better way
			to fix this.
		- (nma_menu_vpn_item_clicked): clarify action when the selected VPN
			connection is already active

2007-12-05  Dan Williams  <dcbw@redhat.com>

	* src/applet-dbus-settings.c
		- (applet_dbus_connection_settings_changed): fix logic decision on
			connection comparison; replace settings rather than replacing the
			whole connection itself

2007-12-05  Dan Williams  <dcbw@redhat.com>

	* src/vpn-properties/nm-vpn-properties.c